<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#66FFF176"
  tools:context=".ui.TodoActivity">

    <Button
      android:id="@+id/clear_completed_button"
      style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
      android:layout_width="wrap_content"
      android:layout_height="32dp"
      android:layout_marginEnd="8dp"
      android:background="@drawable/button_selector"
      android:text="@string/clear_completed"
      android:textColor="@color/colorRed"
      android:textSize="12sp"
      android:visibility="gone"
      app:layout_constraintBottom_toTopOf="@+id/todo_recyclerView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/add_todo_editText" />

     <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:fontFamily="monospace"
      android:text="@string/title_text"
      android:textColor="#CE4747"
      android:textSize="56sp"
      android:textStyle="italic"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.example.todolist.ui.util.ClearFocusEditText
    android:id="@+id/add_todo_editText"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:drawableStart="@drawable/ic_keyboard_arrow_down"
    android:drawablePadding="15dp"
    android:hint="@string/todo_add_hint_text"
    android:paddingStart="12dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/todo_recyclerView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:elevation="5dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/filter_radio_group"
    tools:listitem="@layout/todo_item" />

  <RadioGroup
    android:id="@+id/filter_radio_group"
    android:layout_width="0dp"
    android:layout_height="@dimen/filtering_button_height"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:orientation="horizontal"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/add_todo_editText">

    <RadioButton
      android:id="@+id/all_radio_btn"
      style="@android:style/Widget.Material.CompoundButton.RadioButton"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="@drawable/button_selector"
      android:button="@null"
      android:checked="true"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:text="@string/all"
      android:textAlignment="center"
      android:textAllCaps="true"
      android:textColor="#CE4747"
      android:textSize="12sp" />

    <RadioButton
      android:id="@+id/active_radio_btn"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="@drawable/button_selector"
      android:button="@null"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:text="@string/active"
      android:textAlignment="center"
      android:textAllCaps="true"
      android:textColor="#CE4747"
      android:textSize="12sp" />

    <RadioButton
      android:id="@+id/completed_radio_btn"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="@drawable/button_selector"
      android:button="@null"
      android:focusable="true"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:text="@string/completed"
      android:textAlignment="center"
      android:textAllCaps="true"
      android:textColor="@color/colorRed"
      android:textSize="12sp" />
  </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>